# vibeagent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  default-settings.json  dot.env.example  mcp.Dockerfile  pyproject.toml  vibeagent.py
.github/workflows/: docker-build.yml
docker/docling-mcp/: Dockerfile
docker/vibeagent-mcp/: Dockerfile
