[project]
name = "vibeagent"
version = "0.1.0"
description = "A smolagents-based chat interface."
authors = [{ name = "Andrew Perry", email = "ajperry@pansapiens.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "smolagents[litellm,mcp,telemetry,toolkit]",
    "textual[syntax]",
    "python-dotenv",
    "aider-chat",
    "openai",
    "textual-autocomplete",
    "platformdirs",
    "tiktoken",
]

[project.optional-dependencies]
dev = ["textual-dev"]

[project.scripts]
vibeagent = "vibeagent:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["vibeagent"]
