[project]
name = "vibeagent"
version = "0.1.0"
description = "A smolagents-based chat interface."
authors = [{ name = "Andrew Perry", email = "ajperry@pansapiens.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "smolagents[litellm,mcp,telemetry,toolkit]",
    "rich",
    "prompt-toolkit",
    "python-dotenv",
    "aider-chat",
    "openai",
    "platformdirs",
    "tiktoken",
]


[project.scripts]
vibeagent = "vibeagent:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["vibeagent"]
